# agor

./: .gitignore  AGENT_CHECKLIST_IMPLEMENTATION_PLAN.md  AGOR_INSTRUCTIONS.md  AGOR_README.md  AGOR_USER_GUIDELINES.md  BRANCH_NOTES.md  BUNDLE_INSTRUCTIONS.md  CODERABBIT_CLEANUP_SNAPSHOT.md  DOCUMENTATION_INCONSISTENCIES_ANALYSIS.md  LICENSE  MIGRATION_GUIDE.md  README.md  REMOTE_AGENT_WORK_ORDER.md  UPDATED_AUGMENT_USER_GUIDELINES.md  WORK_SNAPSHOT_2025-01-29.md  agentconvo.md  create_completion_snapshot.py  create_corrected_coordination_system.py  create_improved_remote_agent_handoff.py  create_proper_remote_agent_coordination.py  create_remote_agent_snapshot.py  final_project_coordinator_snapshot.py  fix_remote_agent_work_order.py  function_audit_analysis.md  generate_final_comprehensive_outputs.py  generate_final_outputs.py  generate_pr.py  generate_updated_pr.py  implement_strategic_improvements.py  notes.md  original_readme.md  project_coordinator_handoff.py  pyproject.toml  refactor_terminology.py  requirements.txt  run_agor.sh  setup.cfg  setup.py  simple_memory_test.py  test_bundle_mode_imports.py  (+6 more)
.agor/: augment-agent-memory.md  handoff-summary.md  hotkey_agent-memory.md  memory-integration-memory.md  memory.db  memory.md  refactor_agent-memory.md  session_agent-memory.md  strategic_agent-memory.md  testing_agent-memory.md
.agor/agent-instructions/: agent1-instructions.md  agent2-instructions.md  agent3-instructions.md
.agor/agents/agent_10b2df6f_1750274337/snapshots/: 2025-06-18_1918_comprehensive_context_capture_implementation_trans_snapshot.md
.agor/agents/agent_2c9056c3_1750380761/snapshots/: 2025-06-20_0052_initialization_prompt_updates_for_proper_venv_mana_snapshot.md
.agor/snapshots/: 2025-05-28_1537_memory-integration-phase-2_snapshot.md  2025-06-10_1429_agor-0.5.1-complete---output-formatting-system-fixed-&-coderabbit-issues-resolved_snapshot.md  2025-06-10_1429_agor-0.5.1-complete_snapshot.md  2025-06-15_1240_agor-function-reference-tool-and-memory-branch-cleanup_snapshot.md  2025-06-15_1326_full-terminology-refactor:-dev_tooling-→-dev_tools_snapshot.md  2025-06-15_1336_complete-terminology-refactor:-dev_tooling-→-dev_tools_snapshot.md  2025-06-15_1605_critical:-terminology-refactor-+-architecture-enforcement-complete_snapshot.md
.agor/state/: active_tasks.json  agent_branches.json  pd_evaluation.md  strategy.json  sync_flags.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: agent-feedback.md
.github/workflows/: ci.yml
.trunk/: trunk.yaml
agentgrunt/: main.py  repo_mgmt.py
agentgrunt/gpt_tools/: README_ai.md  agent_prompt_templates.py  code_exploration_docs.md  project_planning_templates.py
agents/agent_6b22f52e_1750026155/snapshots/: 2025-06-15_2222_agent_unique_identification_fixes_snapshot.md
agents/agent_745b9b20_017619/snapshots/: 2025-06-15_2000_pre-security-fixes-comprehensive-snapshot_snapshot.md
agents/agent_7702abff_017998/snapshots/: 2025-06-15_2006_agor-v0.6.0-complete---security-fixes-and-architecture_snapshot.md
agents/agent_7f53f040_1750027518/snapshots/: 2025-06-15_2245_agent_unique_identification_and_deployment_fixes_c_snapshot.md
agents/agent_c5dfbce3_1750108930/snapshots/: 2025-06-16_2122_external_project_integration_system_implementation_snapshot.md
agents/agent_c6e28575_1750026372/snapshots/: 2025-06-15_2226_agent_unique_identification_fixes_complete_snapshot.md
docs/: README.md  agent-prompt-examples.md  agent-start-here.md  agent-workflow-optimization.md  agor-development-guide.md  agor-development-log.md  augment_user_guidelines.md  bundle-mode.md  coordination-audit.md  coordination-example.md  google-ai-studio.md  handoffs.md  index.md  jules-direct-access-guide.md  meta-feedback-workflows.md  multi-agent-protocols.md  protocol-changelog.md  quick-start.md  session-startup-checklist.md  snapshots.md  standalone-mode.md  state-management.md  strategies.md  usage-guide.md  work-orders-and-memory-guide.md
src/agor/: __init__.py  bundler.py  config.py  constants.py  exceptions.py  git_binary.py  logging.py  main.py  memory_sync.py  orchestrator.py  platform.py  repo_mgmt.py  settings.py  strategy.py  utils.py  validation.py
src/agor/tools/: AGOR_INSTRUCTIONS.md  AUGMENTCODE_LOCAL_DETECTION.md  AUGMENT_INITIALIZATION.md  BUNDLE_INITIALIZATION.md  BUNDLE_INSTRUCTIONS.md  CHAINABLE_PROMPTS.md  EXTERNAL_INTEGRATION_GUIDE.md  INSTALLATION_MASTER.md  MENU_FLOW_GUIDE.md  MODE_DETECTION.md  PLATFORM_INITIALIZATION_PROMPTS.md  README_ai.md  REFRESH_PROTOCOLS.md  SNAPSHOT_SYSTEM_GUIDE.md  STANDALONE_INITIALIZATION.md  _commands.py  agent-requirements.txt  agent-start-here.md  agent_checklist_system.py  agent_coordination.py  agent_education.py  agent_handoffs.py  agent_prompt_templates.py  agent_prompts.py  agent_reference.py  agor-meta.md  agor_wrapper.py  checklist.py  code_exploration_docs.md  dev_testing.py  dev_tooling.py  dev_tooling_old.py  dev_tools.py  enhanced_hotkeys.py  external_integration.py  feedback_manager.py  git_operations.py  git_setup.py  handoff_templates.py  hotkeys.py  (+14 more)
src/agor/tools/strategies/: __init__.py  (+11 more)
tests/: __init__.py  conftest.py  test_agent_education.py  test_agent_reference.py  test_code_exploration.py  test_dev_tools.py  test_docs_validation.py  test_hotkeys.py  test_memory_sync_integration.py  test_memory_system_parity.py  test_orchestrator.py  test_sqlite_memory.py  test_validation.py
(+5 files in other folders)
